--- a/app/assets/stylesheets/pages/_group.scss
+++ b/app/assets/stylesheets/pages/_group.scss
@@ -12,6 +12,10 @@
   max-width: 400px;
 }
 
+.list-group {
+  border-radius: 8px;
+}
+
 .list-group-item {
   display: flex;
   justify-content: space-between;
