--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="form-group">
-        <label for="groupSelect">Select Groups:</label>
+        <label for="groupSelect">Select Groups</label>
         <%= f.select(:group_ids, options_from_collection_for_select(@groups, "id", "name", @course.group_ids), { prompt: "Please select" }, 
                                     { multiple: true, class: "form-control", data: { controller: "tom-select" } }, 
                                      ) %>
