--- a/app/views/dashboards/my_groups.html.erb
+++ b/app/views/dashboards/my_groups.html.erb
@@ -20,8 +20,8 @@
 
           <!-- Delete button for created groups -->
           <div class="action-buttons d-flex">
-            <%#= link_to 'Edit', edit_group_path(group), class: 'btn btn-primary me-2' %>
-            <%#= button_to 'Delete', group_path(group), method: :delete, data: { confirm: "Are you sure you want to delete this group? This action cannot be undone.", turbo: false }, class: 'btn btn-danger' %>
+            <%= link_to 'Edit', edit_group_path(group), class: 'btn btn-primary me-2' %>
+            <%= button_to 'Delete', group_path(group), method: :delete, data: { confirm: "Are you sure you want to delete this group? This action cannot be undone.", turbo: false }, class: 'btn btn-danger' %>
           </div>
  
         </div>
