--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -14,13 +14,13 @@
 
       <div class="form-group">
         <%= f.label :description, "Course Description" %>
-        <%= f.text_area :description, maxlength: 250, rows: 2, class: 'form-control my-2', style: 'max-width: 600px;' %>
+        <%= f.text_area :description, maxlength: 250, rows: 2, class: 'form-control', style: 'max-width: 600px;' %>
       </div>
 
       <div class="form-group">
-        <label for="groupSelect">Select Groups</label>
+        <label for="groupSelect" class="mt-3">Assign course to these groups</label>
         <%= f.select(:group_ids, options_from_collection_for_select(@groups, "id", "name", @course.group_ids), { prompt: "Please select" }, 
-                                    { multiple: true, class: "form-control", data: { controller: "tom-select" } }, 
+                                    { multiple: true, class: "form-control mt-2", data: { controller: "tom-select" } }, 
                                      ) %>
       </div>
 
