--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -16,10 +16,10 @@
       <%= f.input :description,
             label: "Course Description",
             as: :text,
-            input_html: { maxlength: 250, rows: 2, class: 'form-control my-2', style: 'max-width: 600px;' } %>
+            input_html: { maxlength: 250, rows: 2, class: 'form-control', style: 'max-width: 600px;' } %>
 
       <div class="form-group">
-        <label for="groupSelect">Select Groups</label>
+        <label for="groupSelect" class="mb-2">Assign course to these groups</label>
         <%= select_tag "group_ids[]", options_from_collection_for_select(@groups, "id", "name"), multiple: true, class: "form-control", id: "groupSelect", data: { controller: "tom-select" } %>
       </div>
 
