Added registered students to My Courses page for Teachers.

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,7 +4,7 @@
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
-    <h1><%= @student.first_name %> <%= @student.last_name %> - Profile</h1>
+    <h1><%= @student.first_name %> <%= @student.last_name %> - Progress</h1>
 
     <h3>Enrolled Courses</h3>
     <% if @courses.any? %>
