--- a/app/views/courses/my_courses.html.erb
+++ b/app/views/courses/my_courses.html.erb
@@ -12,6 +12,21 @@
           <h2><%= course.title %></h2>
           <p><%= course.description %></p>
 
+          <!-- List of Students Registered for the Course -->
+          <h4>Students Registered:</h4>
+          <% if course.registrations.any? %>
+            <ul>
+              <% course.registrations.each do |registration| %>
+                <li>
+                  <!-- Link to student's profile page -->
+                  <%= link_to "#{registration.user.first_name} #{registration.user.last_name}", student_path(registration.user) %>
+                </li>
+              <% end %>
+            </ul>
+          <% else %>
+            <p>No students are currently registered for this course.</p>
+          <% end %>
+
           <!-- Flex container to align questions and Delete button -->
           <div class="course-content d-flex align-items-start justify-content-between">
 
@@ -63,7 +78,7 @@
               <% end %>
             </div>
 
-            <!-- Delete button for created courses -->
+            <!-- Edit and Delete buttons for created courses -->
             <div class="action-buttons d-flex">
               <%= link_to 'Edit', edit_course_path(course), class: 'btn btn-primary me-2' %>
               <%= button_to 'Delete', course_path(course), method: :delete, data: { confirm: "Are you sure you want to delete this course? This action cannot be undone.", turbo: false }, class: 'btn btn-danger' %>
