Improved 'My Courses' page.

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -84,12 +84,12 @@
 .question-number {
   display: inline-block;
   border: 2px solid #CCCCCC;
-  border-radius: 50%;
+  border-radius: 8px;
   color: #CCCCCC;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  line-height: 35px;
+  line-height: 38px;
   height: 40px;
   width: 40px;
   transition: ease 0.3s;
