--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -90,7 +90,7 @@
 
       <!-- Update button -->
       <div class="d-flex gap-3 mb-5">
-        <%= f.submit "Update Course", class: "btn btn-primary" %>
+        <%= f.submit "Update", class: "btn btn-primary" %>
       </div>
 
     <% end %>
