--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,16 +2,19 @@
   border-radius: 50%;
   width: 40px;
 }
+
 .avatar-large {
   border-radius: 50%;
-  width: 56px;
+  height: 140px;
 }
+
 .avatar-bordered {
   border: white 1px solid;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   width: 40px;
 }
+
 .avatar-square {
   border: white 1px solid;
   border-radius: 0px;
