--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -11,7 +11,7 @@
 }
 
 .dashboard-container h4 {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .main-content {
@@ -23,10 +23,11 @@
 
 .card-white {
   background-color: white;
-  border: 1px solid black;
+  border: 1px solid #ccc;
   border-radius: 8px;
   padding: 20px;
   margin-bottom: 20px;
+  max-width: 1200px;
 }
 
 .card-white ul {
