--- a/app/assets/stylesheets/pages/_question.scss
+++ b/app/assets/stylesheets/pages/_question.scss
@@ -33,6 +33,7 @@
 
 .question-box {
   background-color: white;
+  border: 1px solid #ccc;
   border-radius: 18px;
   margin: 0 auto;
   margin-top: 30px;
