--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,60 +1,30 @@
 <div class="dashboard-container d-flex">
+
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
-    <h1>My Enrolled Courses</h1>
+    <h1 class="mb-4">My Courses</h1>
 
     <% if @registered_courses.any? %>
       <% @registered_courses.each do |course| %>
-        <div class="course-item mb-4">
+        <div class="card-white mb-4 p-4">
           <h2><%= course.title %></h2>
           <p><%= course.description %></p>
 
-          <!-- Flex container to align questions, Edit, and Unenroll buttons -->
           <div class="course-content d-flex align-items-start justify-content-between">
 
-            <!-- Questions Progress -->
+            <!-- Questions progress -->
             <div class="questions-progress">
               <% course.questions.each_with_index do |question, index| %>
                 <% attempt = @attempts.find { |a| a.question_id == question.id } %>
+                
+                <!-- Show whether the question has been answered -->
                 <% if attempt %>
-                  <% if question.question_type == 'open_answer' %>
-                    <% if attempt.correct? %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% else %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% end %>
-                  <% elsif question.question_type == 'multiple_answer' %>
-                    <% if attempt.chosen_answers.map(&:id).sort == question.answers.where(correct: true).pluck(:id).sort %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% else %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% end %>
-                  <% else %>
-                    <% if attempt.chosen_answers.present? && attempt.chosen_answers.first&.correct? %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% elsif attempt.chosen_answer_id.present? && Answer.find(attempt.chosen_answer_id).correct? %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% else %>
-                      <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
-                        <%= index + 1 %>
-                      </a>
-                    <% end %>
-                  <% end %>
+                  <a href="<%= course_question_path(course, question) %>" class="question-number question-answered">
+                    <%= index + 1 %>
+                  </a>
                 <% else %>
                   <a href="<%= course_question_path(course, question) %>" class="question-number">
                     <%= index + 1 %>
@@ -63,14 +33,14 @@
               <% end %>
             </div>
 
-            <!-- Unenroll and Edit buttons -->
+            <!--
             <div class="action-buttons">
-              <!-- Unenroll button -->
               <%= button_to 'Unenroll', unenroll_course_path(course), method: :delete, data: { turbo_confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
             </div>
-          </div> <!-- End of course-content flexbox -->
+            -->
+
+          </div>
         </div>
-        <hr>
       <% end %>
     <% else %>
       <p>You are not enrolled in any courses.</p>
