--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,103 +1,88 @@
 <div class="dashboard-container d-flex" data-controller="add-course">
+
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
-    <h1>Hi, <%= current_user.first_name %>!</h1>
-    <h4><%= current_user.email %></h4>
-    <h4>Signed in as: <strong><%= current_user.role.capitalize %></strong></h4>
 
-    <hr class="my-5">
-
-    <h1>Add Course</h1>
-
-    <div class="d-flex align-items-center mb-4">
-      <div class="dropdown me-2">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownCourseButton" data-bs-toggle="dropdown" aria-expanded="false" data-add-course-target="dropdownButton">
-          Select Course
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownCourseButton">
-          <% @courses.each do |course| %>
-            <li>
-              <a class="dropdown-item" href="#" data-course-id="<%= course.id %>" data-course-title="<%= course.title %>" data-action="click->add-course#selectCourse" data-add-course-target="dropdownItem">
-                <%= course.title %>
-              </a>
-            </li>
-          <% end %>
-        </ul>
+    <!-- Flexbox for avatar and profile information -->
+    <div class="d-flex align-items-center">
+      
+      <!-- Avatar image -->
+      <div class="me-4">
+        <%= image_tag 'avatar-blue.png', alt: 'Avatar', class: 'avatar-large' %>
       </div>
 
-      <%= form_with url: register_for_course_path, method: :post, data: { turbo: false }, id: 'registerForm', class: 'd-flex align-items-center' do |f| %>
-        <%= hidden_field_tag :selected_course_id, '', id: 'selected_course_id', data: { add_course_target: 'selectedCourseInput' } %>
-        <%= f.submit 'Add', id: 'registerButton', disabled: true, data: { add_course_target: 'registerButton' } %>
-      <% end %>
+      <!-- Profile information -->
+      <div>
+        <h1>Hi, <%= current_user.first_name %>!</h1>
+        <h4><%= current_user.email %></h4>
+        <h4><strong><%= current_user.role.capitalize %></strong></h4>
+      </div>
     </div>
 
-    <hr class="my-5">
+    <!-- Weekly Task wrapped in card-white -->
+    <div class="card-white p-4 my-4">
+      <h1>Weekly Task</h1>
+      <div class="d-flex align-items-center mb-4">
+        <div class="dropdown me-2">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownCourseButton" data-bs-toggle="dropdown" aria-expanded="false" data-add-course-target="dropdownButton">
+            Select Course
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownCourseButton">
+            <% @courses.each do |course| %>
+              <li>
+                <a class="dropdown-item" href="#" data-course-id="<%= course.id %>" data-course-title="<%= course.title %>" data-action="click->add-course#selectCourse" data-add-course-target="dropdownItem">
+                  <%= course.title %>
+                </a>
+              </li>
+            <% end %>
+          </ul>
+        </div>
 
-    <h1>Recent Courses</h1>
+        <%= form_with url: register_for_course_path, method: :post, data: { turbo: false }, id: 'registerForm', class: 'd-flex align-items-center' do |f| %>
+          <%= hidden_field_tag :selected_course_id, '', id: 'selected_course_id', data: { add_course_target: 'selectedCourseInput' } %>
+          <%= f.submit 'Add', id: 'registerButton', disabled: true, data: { add_course_target: 'registerButton' } %>
+        <% end %>
+      </div>
+    </div>
 
-    <% @registered_courses_with_attempts.each do |course_with_attempt| %>
-      <% course = course_with_attempt[:course] %>
-      <div class="course-progress mb-4">
-        <h4><%= course.title %></h4>
+    <!-- Recent Courses wrapped in card-white -->
+    <div class="card-white p-4">
+      <h1>Recent Courses</h1>
+
+      <% @registered_courses_with_attempts.each do |course_with_attempt| %>
+        <% course = course_with_attempt[:course] %>
+        <div class="course-progress mb-4">
+          <h4><%= course.title %></h4>
+
+          <!-- Questions progress -->
           <div class="questions-progress">
             <% course.questions.each_with_index do |question, index| %>
-              <% attempt = @attempts.find { |a| a.question_id == question.id } %>
-
-              <% if attempt %>
-                <% if question.question_type == 'multiple_answer' %>
-                  <!-- Handle multiple answers -->
-                  <% if attempt.chosen_answers.map(&:id).sort == question.answers.where(correct: true).pluck(:id).sort %>
-                    <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% else %>
-                    <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% end %>
-
-                <% elsif question.question_type == 'open_answer' %>
-                  <!-- Handle open answer questions -->
-                  <% if attempt.correct? %> <!-- Check the 'correct' attribute of the attempt -->
-                    <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% else %>
-                    <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% end %>
-
-                <% else %>
-                  <!-- Handle multiple_choice and true_false -->
-                  <% if attempt.chosen_answers.present? && attempt.chosen_answers.first&.correct? %>
-                    <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% elsif attempt.chosen_answer_id.present? && Answer.find(attempt.chosen_answer_id).correct? %>
-                    <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% else %>
-                    <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
-                      <%= index + 1 %>
-                    </a>
-                  <% end %>
-                <% end %>
-
-              <% else %>
-                <!-- No attempt made yet -->
+              <% if current_user.teacher? %>
+                <!-- Teachers -->
                 <a href="<%= course_question_path(course, question) %>" class="question-number">
                   <%= index + 1 %>
                 </a>
+              <% else %>
+                <!-- Students -->
+                <% attempt = @attempts.find { |a| a.question_id == question.id } %>
+                <% if attempt %>
+                  <a href="<%= course_question_path(course, question) %>" class="question-number question-answered">
+                    <%= index + 1 %>
+                  </a>
+                <% else %>
+                  <a href="<%= course_question_path(course, question) %>" class="question-number">
+                    <%= index + 1 %>
+                  </a>
+                <% end %>
               <% end %>
             <% end %>
           </div>
+        </div>
+      <% end %>
+    </div>
 
-      </div>
-    <% end %>
   </div>
 </div>
