--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,5 @@
 <div class="dashboard-container d-flex">
+
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
@@ -9,45 +10,49 @@
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1" data-controller="add-members">
-    <h1>Create a New Group</h1>
 
-    <%= simple_form_for @group, data: { turbo: true } do |f| %>
+    <h1 class="mb-4">Create a New Group</h1>
 
-      <!-- Group Name Input -->
-      <div class="field group-form-control">
-        <%= f.input :name, label: "Group name", required: true %>
-      </div>
+    <div class="card-white p-4">
 
-      <!-- Select Groups for pre-selecting students -->
-      <div class="form-group">
-        <label for="groupSelect">Select all students from an existing group (optional)</label>
-        <%= select_tag "group_ids[]", options_from_collection_for_select(@groups, "id", "name"), multiple: true, class: "form-control mt-2 mb-3", id: "groupSelect", data: { controller: "tom-select" } %>
-      </div>
+      <%= simple_form_for @group, data: { turbo: true } do |f| %>
 
-      <!-- Student Checkboxes -->
-      <div class="field">
-        <%= f.label "Select students to add to the group" %>
-
-        <!-- List all students with checkboxes -->
-        <div class="student-list mt-2">
-          <ul class="list-group">
-            <!-- "Select all" checkbox -->
-            <li class="list-group-item" style="background-color: white;">
-              <span>Select all</span>
-              <%= check_box_tag "select_all", "all", false, id: "select-all", class: "select-all-checkbox", data: { action: "change->add-members#toggleSelectAll" } %>
-            </li>
-
-            <% User.students.each do |student| %>
-              <li class="list-group-item">
-                <span><%= student.full_name %></span>
-                <%= check_box_tag "group[student_ids][]", student.id, false, class: "student-checkbox", data: { add_members_target: "studentCheckbox" } %>
-              </li>
-            <% end %>
-          </ul>
+        <!-- Group name -->
+        <div class="field group-form-control">
+          <%= f.input :name, label: "Group name", required: true %>
         </div>
-      </div>
 
-      <%= f.submit "Create Group", class: "btn btn-primary mt-4 mb-5", id: "submit-group" %>
-    <% end %>
+        <!-- Select groups for pre-selecting students -->
+        <div class="form-group">
+          <label for="groupSelect">Select all students from an existing group (optional)</label>
+          <%= select_tag "group_ids[]", options_from_collection_for_select(@groups, "id", "name"), multiple: true, class: "form-control mt-2 mb-3", id: "groupSelect", data: { controller: "tom-select" } %>
+        </div>
+
+        <!-- Student checkboxes -->
+        <div class="field">
+          <%= f.label "Select students to add to the group" %>
+
+          <!-- List all students with checkboxes -->
+          <div class="student-list mt-2">
+            <ul class="list-group">
+              <!-- "Select all" checkbox -->
+              <li class="list-group-item" style="background-color: white;">
+                <span>Select all</span>
+                <%= check_box_tag "select_all", "all", false, id: "select-all", class: "select-all-checkbox", data: { action: "change->add-members#toggleSelectAll" } %>
+              </li>
+
+              <% User.students.each do |student| %>
+                <li class="list-group-item">
+                  <span><%= student.full_name %></span>
+                  <%= check_box_tag "group[student_ids][]", student.id, false, class: "student-checkbox", data: { add_members_target: "studentCheckbox" } %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+        <%= f.submit "Create Group", class: "btn btn-primary mt-4 mb-2", id: "submit-group" %>
+      <% end %>
+    </div>
   </div>
 </div>
