--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -15,7 +15,7 @@
     <% end %>
     <% if current_user.teacher? %>
       <li class="nav-item">
-        <a class="nav-link <%= 'active' if controller_name == 'groups' && action_name == 'new' %>" href="<%= new_group_path %>">New Group</a>
+        <a class="nav-link <%= 'active' if controller_name == 'groups' && action_name == 'new' %>" href="<%= new_group_path %>">Create Group</a>
       </li>
     <% end %>
     <% if current_user.teacher? %>
@@ -25,7 +25,7 @@
     <% end %>
     <% if current_user.teacher? %>
       <li class="nav-item">
-        <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'new' %>" href="<%= new_course_path %>">New Course</a>
+        <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'new' %>" href="<%= new_course_path %>">Create Course</a>
       </li>
     <% end %>
   </ul>
