--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,7 +8,12 @@
     <h1 class="question-title">QUESTION #<%= @question_number %></h1>
 
     <!-- Back button -->
-    <% if current_user.teacher? %>
+    <% if params[:student_id] %>
+      <% student = User.find(params[:student_id]) %>
+      <%= link_to student_path(student), class: "back-btn" do %>
+        <p><i class="fa-solid fa-arrow-left mx-1"></i><span class="ms-2">Back to <%= student.first_name %>'s profile</span></p>
+      <% end %>
+    <% elsif current_user.teacher? %>
       <%= link_to my_courses_courses_path, class: "back-btn" do %>
         <p><i class="fa-solid fa-arrow-left mx-1"></i><span class="ms-2">Back to My Courses</span></p>
       <% end %>
@@ -33,6 +38,12 @@
         <%= image_tag @question.image, alt: "Question image", class: "question-image img-fluid my-4" %>
       <% end %>
 
+      <!-- Retrieve the student's attempt -->
+      <% if params[:student_id] %>
+        <% student_attempt = Attempt.find_by(user_id: params[:student_id], question_id: @question.id) %>
+        <% student = User.find(params[:student_id]) %>
+      <% end %>
+
       <%= form_with url: submit_answer_course_question_path(@course, @question), method: :post, local: true, data: { answer_target: "form" } do |f| %>
         <div class="answers">
           <% if @question.question_type == 'open_answer' %>
@@ -41,12 +52,7 @@
             </div>
 
             <% if current_user.teacher? %>
-              <div class="mt-3">
-                <strong>Answer:</strong> <%= @question.answers.first.content %>
-              </div>
-              <%= link_to course_question_path(@course, @next_question || @course.questions.first), class: "btn btn-primary mt-3" do %>
-                Next
-              <% end %>
+              <!-- No submit for teachers -->
             <% else %>
               <%= f.submit "Answer", class: "btn btn-primary mt-3" %>
             <% end %>
@@ -62,12 +68,7 @@
             <% end %>
 
             <% if current_user.teacher? %>
-              <div class="mt-3">
-                <strong>Answer:</strong> <%= @question.answers.where(correct: true).map(&:content).join(", ") %>
-              </div>
-              <%= link_to course_question_path(@course, @next_question || @course.questions.first), class: "btn btn-primary mt-3" do %>
-                Next
-              <% end %>
+              <!-- No submit for teachers -->
             <% else %>
               <%= f.submit "Answer", class: "btn btn-primary mt-3" %>
             <% end %>
@@ -84,23 +85,51 @@
             <%= f.hidden_field :answer, id: "selected_answer", data: { answer_target: "hiddenAnswerField" } %>
 
             <% if current_user.teacher? %>
-              <div class="mt-4">
-                <strong>Answer:</strong> <%= @question.answers.find_by(correct: true)&.content %>
-              </div>
-              
-              <!-- If this is the last question, show 'Back' button, otherwise 'Next' -->
-              <% if @next_question.present? %>
-                <%= link_to course_question_path(@course, @next_question), class: "btn btn-primary mt-3" do %>
-                  Next
-                <% end %>
-              <% else %>
-                <%= link_to my_courses_courses_path, class: "btn btn-primary mt-3" do %>
-                  Finish
-                <% end %>
-              <% end %>
-
+              <!-- No submit for teachers -->
             <% else %>
               <%= f.submit "Answer", class: "btn btn-primary mt-3" %>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+
+      <!-- Correct Answer and Student's Answer for teachers -->
+      <% if current_user.teacher? %>
+        <div class="mt-4">
+          <strong>Correct Answer:</strong> <%= @question.answers.where(correct: true).map(&:content).join(", ") %>
+        </div>
+
+        <!-- Only show the student's answer if student_id is present -->
+        <% if params[:student_id] %>
+          <div class="mt-2">
+            <strong><%= student&.first_name %>'s Answer:</strong>
+            <% if @question.question_type == 'open_answer' %>
+              <%= student_attempt&.written_answer.presence || "No answer given" %>
+            <% elsif @question.question_type == 'multiple_answer' %>
+              <%= student_attempt&.chosen_answers&.map(&:content).join(", ") || "No answer given" %>
+            <% else %>
+              <%= Answer.find_by(id: student_attempt&.chosen_answer_id)&.content || "No answer given" %>
+            <% end %>
+          </div>
+        <% end %>
+
+        <!-- Next Button for Teachers -->
+        <div class="mt-2">
+          <% if @next_question.present? %>
+            <%= link_to course_question_path(@course, @next_question, student_id: params[:student_id]), class: "btn btn-primary mt-3" do %>
+              Next
+            <% end %>
+          <% else %>
+            <% if params[:student_id] %>
+              <!-- Redirect to student's profile if student_id exists -->
+              <%= link_to student_path(student), class: "btn btn-primary mt-3" do %>
+                Finish
+              <% end %>
+            <% else %>
+              <!-- Redirect to My Courses if no student_id -->
+              <%= link_to my_courses_courses_path, class: "btn btn-primary mt-3" do %>
+                Finish
+              <% end %>
             <% end %>
           <% end %>
         </div>
@@ -112,7 +141,7 @@
       <div class="navigation-wrapper">
         <div class="previous-button">
           <% if @previous_question %>
-            <%= link_to course_question_path(@course, @previous_question), class: "chevron-btn" do %>
+            <%= link_to course_question_path(@course, @previous_question, student_id: params[:student_id]), class: "chevron-btn" do %>
               <i class="fa fa-chevron-left"></i>
             <% end %>
           <% else %>
@@ -130,7 +159,7 @@
               <% if attempt %>
                 <!-- Teachers' answered questions will show as default -->
                 <% if current_user.teacher? %>
-                  <a href="<%= course_question_path(@course, question) %>" class="question-number">
+                  <a href="<%= course_question_path(@course, question, student_id: params[:student_id]) %>" class="question-number">
                     <%= index + 1 %>
                   </a>
                 <% else %>
@@ -139,7 +168,7 @@
                   </a>
                 <% end %>
               <% else %>
-                <a href="<%= course_question_path(@course, question) %>" class="question-number">
+                <a href="<%= course_question_path(@course, question, student_id: params[:student_id]) %>" class="question-number">
                   <%= index + 1 %>
                 </a>
               <% end %>
@@ -149,7 +178,7 @@
 
         <div class="next-button">
           <% if @next_question %>
-            <%= link_to course_question_path(@course, @next_question), class: "chevron-btn" do %>
+            <%= link_to course_question_path(@course, @next_question, student_id: params[:student_id]), class: "chevron-btn" do %>
               <i class="fa fa-chevron-right"></i>
             <% end %>
           <% else %>
