Added complete/incomplete, score, and time spent to My Courses.

--- a/app/assets/stylesheets/pages/_course.scss
+++ b/app/assets/stylesheets/pages/_course.scss
@@ -35,3 +35,8 @@
   // This isn't working for some reason!
   background-color: #4580C4;
 }
+
+.students-list {
+  font-family: 'Lato', sans-serif;
+  padding-left: 20px;
+}
