--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -41,7 +41,7 @@
                 <%= check_box_tag "select_all", "all", false, id: "select-all", class: "select-all-checkbox", data: { action: "change->add-members#toggleSelectAll" } %>
               </li>
 
-              <% User.students.each do |student| %>
+              <% User.students.sort_by { |student| [student.first_name, student.last_name] }.each do |student| %>
                 <li class="list-group-item">
                   <span><%= student.full_name %></span>
                   <%= check_box_tag "group[student_ids][]", student.id, false, class: "student-checkbox", data: { add_members_target: "studentCheckbox" } %>
