--- a/app/views/dashboards/my_groups.html.erb
+++ b/app/views/dashboards/my_groups.html.erb
@@ -29,15 +29,16 @@
           </div>
 
           <!-- Students Section -->
-          <h4>Studenten:</h4>
+          <h4>Studenten</h4>
           <ul>
-            <% group.students.each do |student| %>
+            <% group.students.sort_by { |student| [student.first_name, student.last_name] }.each do |student| %>
               <li>
                 <!-- Link to student's profile -->
                 <%= link_to "#{student.first_name} #{student.last_name}", student_path(student), class: 'student-link' %>
               </li>
             <% end %>
           </ul>
+
         </div>
       <% end %>
     <% else %>
