--- a/app/views/dashboards/my_groups.html.erb
+++ b/app/views/dashboards/my_groups.html.erb
@@ -29,7 +29,7 @@
           </div>
 
           <!-- Students Section -->
-          <h4>Studenten</h4>
+          <h4><strong>Studenten</strong></h4>
           <ul>
             <% group.students.sort_by { |student| [student.first_name, student.last_name] }.each do |student| %>
               <li>
